--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -17,51 +13,21 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@generated/graphql": [
-        "./src/generated/graphql/graphql.ts"
-      ],
-      "@generated/graphql/*": [
-        "./src/generated/graphql/*"
-      ],
-      "@helpers": [
-        "./src/helpers"
-      ],
-      "@helpers/*": [
-        "./src/helpers/*"
-      ],
-      "@context": [
-        "./src/context"
-      ],
-      "@context/*": [
-        "./src/context/*"
-      ],
-      "@components": [
-        "./src/components"
-      ],
-      "@components/*": [
-        "./src/components/*"
-      ],
-      "@hooks": [
-        "./src/hooks"
-      ],
-      "@hooks/*": [
-        "./src/hooks/*"
-      ],
-      "@models": [
-        "./src/models"
-      ],
-      "@models/*": [
-        "./src/models/*"
-      ],
+      "@generated/graphql": ["./src/generated/graphql/graphql.ts"],
+      "@generated/graphql/*": ["./src/generated/graphql/*"],
+      "@helpers": ["./src/helpers"],
+      "@helpers/*": ["./src/helpers/*"],
+      "@context": ["./src/context"],
+      "@context/*": ["./src/context/*"],
+      "@components": ["./src/components"],
+      "@components/*": ["./src/components/*"],
+      "@hooks": ["./src/hooks"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@models": ["./src/models"],
+      "@models/*": ["./src/models/*"]
     },
     "target": "ES2017"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "download-schema.js"],
+  "exclude": ["node_modules"]
 }
