CODEGEN fix duplication ts types
with
namingConvention: 'keep',
now we have different types
cmp_DateFieldFacetnameArgs
and
cmp_DateFieldFacetNameArgs

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.2.6",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-graphql-request": "^6.3.0",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
     "@parcel/watcher": "^2.4.1",
     "@types/node": "^20",
     "@types/object-hash": "^3.0.6",
