Fix llms.txt and robots.txt endpoints

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "codegen:clean": "rimraf src/generated/graphql",
     "codegen": "yarn codegen:clean && graphql-codegen",
     "dev": "next dev --experimental-https",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev --experimental-https",
     "build": "next build",
     "build:all": "yarn build:communication && yarn codegen && node postprocess-types.cjs && yarn build",
     "build:communication": "vite build --config vite-ci.config.ts",
@@ -38,6 +39,7 @@
     "@types/object-hash": "^3.0.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
     "postcss": "^8",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
